--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wizard's Roulette</title>
 </head>
+
 <body>
-    
+    <header>
+        <section>
+            <img src="img/sortinghat.png">
+        </section>
+    </header>
+
+
+
+
+
+
 </body>
 </html>
