--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -14,19 +14,18 @@
             <img src="img/sortinghat.png" alt="Sorting Hat" class="hat">
         </section>
     </header>
+    <main>
+        <section class ="container">
+            <h1>Wizard's Roulette</h1>
+            <h2>spells from the Harry Potter world</h2>
 
-    <section class ="container">
-        <h1>Wizard's Roulette</h1>
-        <h2>spells from the Harry Potter world</h2>
-
-        <p>Step into the wizarding world with the Random Spell Generator! With a flick of your</p> 
-        <p>wand (or click of a button), summon a spell from the magical archives of Hogwarts.</p> 
-        <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will</p>
-        <p>appear next. Perfect for dueling practice, wizard roleplay, or just adding a touch of</p>
-        <p>mystery to your day.</p>
-    </section>
-
-    
-    
+            <p>Step into the wizarding world with the Random Spell Generator! With a flick of your</p> 
+            <p>wand (or click of a button), summon a spell from the magical archives of Hogwarts.</p> 
+            <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will</p>
+            <p>appear next. Perfect for dueling practice, wizard roleplay, or just adding a touch of</p>
+            <p>mystery to your day.</p>
+        </section>
+    </main>
+    <script src="script.js"></script>  
 </body>
 </html>
