--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -6,6 +6,10 @@
     <title>Wizard's Roulette</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Henny+Penny&display=swap" rel="stylesheet">
 </head>
 
 <body>
