--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -31,6 +31,7 @@
             <p>mystery to your day.</p>
 
             <button id="API button" class="button">Generate Random Spell</button>
+            <button id="APIbutton" class="button">Generate Random Spell</button>
         </article>
     </main>
 
