--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -32,6 +32,7 @@
 
             <button id="API button" class="button">Generate Random Spell</button>
             <button id="APIbutton" class="button">Generate Random Spell</button>
+            <button id="APIButton" class="button">Generate Random Spell</button>
         </article>
     </main>
 
