--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -15,7 +15,8 @@
 <body>
     <header>
         <section class="hat-animation">
-            <img src="img/sortinghat.png" alt="Sorting Hat" class="hat">
+            <img src="img/sortinghat.png" alt="sortingHat" class="hat">
+            <div class="sprechBlase" alt="sortingHatSpeechBubble" class="hat">hmm...difficult,<br>very difficult</div>
         </section>
     </header>
 
