Styling Desktop meh oder weniger komplett

--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizard's Roulette</title>
 
     <link rel="stylesheet" href="style.css">
@@ -25,12 +25,12 @@
             <h1>Wizard's Roulette</h1>
             <h2>spells from the Harry Potter world</h2>
 
-            <p>Step into the wizarding world with the Random Spell Generator! With a flick of your</p> 
+            <div class="TextIntroFull"><p>Step into the wizarding world with the Random Spell Generator! With a flick of your</p> 
             <p>wand (or click of a button), summon a spell from the magical archives of Hogwarts.</p> 
             <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will</p>
             <p>appear next. Perfect for dueling practice, wizard roleplay, or just adding a touch of</p>
-            <p>mystery to your day.</p>
-            <button id="APIButton" class="button">Generate Random Spell</button>
+            <p>mystery to your day.</p></div>
+            <button id="APIButton" class="button"><div class = "TextInButton">Generate Random Spell</div> </button>
         </article>
     </main>
 
