--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -25,11 +25,9 @@
             <h1>Wizard's Roulette</h1>
             <h2>spells from the Harry Potter world</h2>
 
-            <div class="TextIntroFull"><p>Step into the wizarding world with the Random Spell Generator! With a flick of your</p> 
-            <p>wand (or click of a button), summon a spell from the magical archives of Hogwarts.</p> 
-            <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will</p>
-            <p>appear next. Perfect for dueling practice, wizard roleplay, or just adding a touch of</p>
-            <p>mystery to your day.</p></div>
+            <div class="TextIntroFull"><p>Step into the wizarding world with the Random Spell Generator! With a flick of your wand (or click of a button), summon a spell from the magical archives of Hogwarts.</p> 
+            <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will appear next.</p>
+            <p>Perfect for dueling practice, wizard roleplay, or just adding a touch of mystery to your day.</p></div>
             <button id="APIButton" class="button"><div class = "TextInButton">Generate Random Spell</div> </button>
         </article>
     </main>
