Projekt neu initialisiert

--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -15,8 +15,11 @@
 <body>
     <header>
         <section class="hat-animation">
-            <img src="img/sortinghat.png" alt="sortingHat" class="hat">
-            <div class="sprechBlase" alt="sortingHatSpeechBubble" class="hat">hmm...difficult,<br>very difficult</div>
+            <div class="hat">
+                <img src="img/sortinghat.png" alt="sortingHat" class="hat">
+
+                <div class="speech-bubble" alt="sortingHatSpeechBubble">hmm...difficult,<br>very difficult</div>
+            </div>
         </section>
     </header>
 
