--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -16,10 +16,9 @@
     <header>
         <section class="hat-animation">
             <div class="hat">
-                <img src="img/sortinghat.png" alt="sortingHat" class="hat">
-
-                <div class="speech-bubble" alt="sortingHatSpeechBubble">hmm...difficult,<br>very difficult</div>
+                <img src="img/sortinghat.png" alt="sortingHat" class="hat-img">
             </div>
+            <div class="speech-bubble" alt="sortingHatSpeechBubble">hmm...difficult,<br>very difficult</div>
         </section>
     </header>
 
