Angefangen mit API verknüpfen und abrufen und schon ein bisschen darstellen

--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -32,6 +32,7 @@
             <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will appear next.</p>
             <p>Perfect for dueling practice, wizard roleplay, or just adding a touch of mystery to your day.</p></div>
             <button id="APIButton" class="button"><div class = "TextInButton">Generate Random Spell</div> </button>
+            <div id="spellOutput"></div>
         </article>
     </main>
 
