--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -17,9 +17,10 @@
         <section class="hat-animation">
             <div class="hat">
                 <img src="img/sortinghat.png" alt="sortingHat" class="hat-img">
-            </div>
-            <div class="speech-bubble" alt="sortingHatSpeechBubble">hmm...difficult,<br>very difficult</div>
+        </div>
         </section>
+        
+        <div class="speech-bubble">hmm...difficult,<br>very difficult</div>
     </header>
 
     <main>
