Chli meh stashes korrigiert

--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -17,10 +17,9 @@
         <section class="hat-animation">
             <div class="hat">
                 <img src="img/sortinghat.png" alt="sortingHat" class="hat-img">
-        </div>
+            </div>
+            <div class="speech-bubble" alt="sortingHatSpeechBubble">hmm...difficult,<br>very difficult</div>
         </section>
-        
-        <div class="speech-bubble">hmm...difficult,<br>very difficult</div>
     </header>
 
     <main>
@@ -33,9 +32,11 @@
                 <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will appear next.</p>
                 <p>Perfect for dueling practice, wizard roleplay, or just adding a touch of mystery to your day.</p></div>
             </div>
-            <div id="spellOutput"></div>
+            <div id= "spellOutput"></div>
             <div id = "ButtonContainer">
-                <button id="APIButton" class="button"><div class = "TextInButton">Generate Random Spell</div> </button>
+                <button id="APIButton" class="button">
+                    <div class = "TextInButton">Generate Random Spell</div> 
+                </button>
             </div>
         </article>
     </main>
