anpassungen Animation Hat

--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -17,8 +17,11 @@
         <section class="hat-animation">
             <div class="hat">
                 <img src="img/sortinghat.png" alt="sortingHat" class="hat-img">
+                <div class="speech-bubble">
+                    hmm...difficult,<br>very difficult
+                </div>
             </div>
-            <div class="speech-bubble" alt="sortingHatSpeechBubble">hmm...difficult,<br>very difficult</div>
+        </section>
         </section>
     </header>
 
