--- a/sara_jenny/index.html
+++ b/sara_jenny/index.html
@@ -37,7 +37,15 @@
                 </div>
             </div>
 
-            <div id= "spellOutput"></div>
+            <div id= "spellOutput">
+                <h2 id="SpellTitle" style="display: none;">Your randomly chosen spell:</h2>
+                <div id="cardForSpells" style="display: none;">
+                    <div id="TextinCard">
+                    </div>
+                    <div id="WandsInCard">
+                    </div>
+                </div>
+            </div>
 
             <div id = "ButtonContainer">
                 <button id="APIButton" class="button">
