--- a/index2.html
+++ b/index2.html
@@ -21,6 +21,39 @@
         </section>
     </header>
 
+    <main>
+        <article class ="container">
+            <h1>Wizard's Roulette</h1>
+            <div id="TextAnfangFull">
+                <h2 class="Subtitle">spells from the Harry Potter world</h2>
+
+                <div class="TextIntroFull">
+                <p>Step into the wizarding world with the Random Spell Generator! With a flick of your wand (or click of a button), summon a spell from the magical archives of Hogwarts.</p> 
+                <p>From charming Lumos to chaotic Expelliarmus, you never know what incantation will appear next.</p>
+                <p>Perfect for dueling practice, wizard roleplay, or just adding a touch of mystery to your day.</p>
+                </div>
+            </div>
+
+            <div id= "spellOutput">
+                <h2 id="SpellTitle" style="display: none;">Your randomly chosen spell:</h2>
+                <div id="cardForSpells" style="display: none;">
+                    <div id="TextinCard">
+                    </div>
+                    <div id="WandsInCard">
+                    </div>
+                </div>
+            </div>
+
+            <div id = "ButtonContainer">
+                <button id="APIButton" class="button">
+                    <div class = "TextInButton">
+                        Generate Random Spell
+                    </div> 
+                </button>
+            </div>
+            
+        </article>
+    </main>
 
     <script src="script2.js" type="module"></script>  
 </body>
